@@ -3,12 +3,17 @@ package com.guru.springsecurity_learning.Service;
 
 import com.guru.springsecurity_learning.DAO.ContactRepository;
 import com.guru.springsecurity_learning.DTO.ContactDTOs.AdminCreateContactDTO;
+import com.guru.springsecurity_learning.DTO.ContactDTOs.ContactListResponseDTO;
 import com.guru.springsecurity_learning.DTO.ContactDTOs.ContactResponseDTO;
 import com.guru.springsecurity_learning.Exception.ResourceNotFoundException;
 import com.guru.springsecurity_learning.Model.Contact;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
@@ -27,14 +32,29 @@ public class ContactServiceImpl implements ContactService {
     private ModelMapper modelMapper;
 
     @Override
-    public List<ContactResponseDTO> getAllContacts() {
-        List<Contact> contacts=contactRepository.findAll();
+    public ContactListResponseDTO getAllContacts(int page, int size, String sortBy, String direction) {
+
+        Sort sort = direction.equalsIgnoreCase("desc")
+                ? Sort.by(sortBy).descending()
+                : Sort.by(sortBy).ascending();
+
+        Pageable pageable = PageRequest.of(page, size, sort);
+        Page<Contact> contacts=contactRepository.findAll(pageable);
+
 
        if(contacts.isEmpty()){
            throw new ResourceNotFoundException("Contacts not found");
        }
-       return contacts.stream().map(contact->modelMapper.map(contact,ContactResponseDTO.class))
-                                                              .collect(Collectors.toList());
+      List<ContactResponseDTO> contactResponseDTOS=contacts.getContent().stream().map((contact)->modelMapper.map(contact,ContactResponseDTO.class)).toList();
+
+       ContactListResponseDTO contactListResponseDTO=new ContactListResponseDTO();
+       contactListResponseDTO.setContactList(contactResponseDTOS);
+       contactListResponseDTO.setTotalPages(contacts.getTotalPages());
+       contactListResponseDTO.setTotalElements(contacts.getTotalElements());
+       contactListResponseDTO.setPageNumber(contacts.getNumber());
+       contactListResponseDTO.setPageSize(contacts.getSize());
+       contactListResponseDTO.setLast(contacts.isLast());
+       return contactListResponseDTO;
     }
 
     @Override
